--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,6 +15,6 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install texlive texlive-publishers texlive-science latexmk texlive-bibtex-extra biber texlive-lang-german
+      run: sudo apt-get update && sudo apt-get install texlive texlive-publishers texlive-science latexmk texlive-bibtex-extra biber texlive-lang-german texlive-pstricks
     - name: Build document
       run: make
