--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,7 +14,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - run: mkdir -p output
+    
     - name: Install dependencies
       run: sudo apt-get update && sudo apt-get install texlive texlive-publishers texlive-science latexmk texlive-bibtex-extra biber texlive-lang-german texlive-pstricks
     - name: Build document
       run: make
+
+    - uses: actions/upload-artifact@v3
+      with:
+          name: thesis
+          path: output/thesis.pdf
